# pymodule

./: .gitignore  README.md  build.py  config.toml  pyproject.toml  test0.py
src/pymodule/: .gitignore  __init__.py
src/pymodule/cli/: app.py
src/pymodule/core/: __init__.py  app_runner.py  benchmark.py  config.py  core_module_a.py  core_module_b.py
src/pymodule/drivers/: __init__.py  ina236.py
src/pymodule/extensions/: __init__.py
src/pymodule/extensions/cmodulea/: __init__.py  cmodulea.c  cmodulea.h
src/pymodule/extensions/cmodulea/utils/: utils.c
src/pymodule/extensions/cmoduleb/: __init__.py
src/pymodule/extensions/hello_world/: hello_world.pyx
src/pymodule/extensions/worker/: worker.pyx
src/pymodule/include/: pymodule.h
src/pymodule/logger/: __init__.py  logger_module.py
src/pymodule/utils/: __init__.py  utilities.py
tests/core/: test_config.py  test_core_module_a.py  test_core_module_b.py
tests/drivers/: test_ina236.py
tests/utils/: test_utilities.py
